--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,9 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="32dp"
-        android:src="@drawable/ic_tambah"/>
+        android:src="@drawable/ic_tambah"
+        android:contentDescription="Tambah Item"
+        />
 
     <ProgressBar
         android:id="@+id/pb_petani"
